--- a/styles/less/blocks/_footer.less
+++ b/styles/less/blocks/_footer.less
@@ -3,42 +3,41 @@
 .footer{
     background-color: #fab03e;
     border:1px solid;
-    .footer__inner{
+    &__inner{
         display:flex;
         justify-content: space-around;
     }
-    .footer__features{
+    &__features{
         border:solid 1px;
-        .footer__title{
+        &__title{
             color: white;
             
-        .footer__form-input{
+        &__form-input{
             border-radius:30px;
             -webkit-border-radius:30px;
             -moz-border-radius:30px;
             -ms-border-radius:30px;
             -o-border-radius:30px;
-}
+        }
         }
     }
-    .footer__features--payment{
+    &__features--payment{
         border:solid 1px;
-        .footer__icon{
+        &__icon{
             color:white;
-        
         }
     
     }
-    .footer__holder{
+    &__holder{
         border:solid 1px;
         background-color:#6c2c1c;
         color: #af8a82;
     }
-    .footer__sub-title{
+    &__sub-title{
         display: flex;
         justify-content: center;
     }
-    .footer__link{
+    &__link{
         color: #6d450c;
     }
 }
