--- a/styles/less/blocks/_menu.less
+++ b/styles/less/blocks/_menu.less
@@ -4,23 +4,21 @@
     /* border: 1px solid red; */
     display: flex;
     align-items: center;
-    padding-left: 30px; 
-        .menu__list{
-            list-style: none;
-            display:flex;
-            align-items:center;
-            letter-spacing: 0px;
-                .menu__item{
-                    margin-right: 35px;
-                    .menu__link {
-                        /* border: 1px solid red; */
-                        color: #ffffff
-                    }
-                }
+    padding-left: 30px;
+
+    &__list {
+        list-style: none;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0px;
+    }
+
+    &__item {
+        margin-right: 35px;
+    }
+
+    &__link {
+        /* border: 1px solid red; */
+        color: #ffffff
     }
 }
-
-
-
-
-
