--- a/styles/less/blocks/_personal.less
+++ b/styles/less/blocks/_personal.less
@@ -11,17 +11,18 @@
             flex-direction: row;
             justify-content:space-between;
             align-items:flex-start;
-                .personal__list{
-                    list-style: none;
-                    display:flex;
-                    align-items:center;
-                    .personal__icon-search{
-                        margin-left: 35px;
-                    }
-                }
-            }
-                
+&__list{
+        list-style: none;
+        display:flex;
+        align-items:center;
 }
+&__icon-search{
+    margin-left: 35px;
+    }
+    }
+}
+                
+
 
 
 
