--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -9,32 +9,32 @@
 
 @font-face {
     font-family: "MuliRegular";
-    src: url("/assets/fonts/Muli-Regular.woff");
+    src: url("../../assets/fonts/Muli-Regular.woff");
 }
 
 @font-face {
     font-family: "MuliBold";
-    src: url("/assets/fonts/Muli-Bold.woff");
+    src: url("../../assets/fonts/Muli-Bold.woff");
 }
 
 @font-face {
     font-family: "MuliExtraBold";
-    src: url("/assets/fonts/Muli-ExtraBold.woff");
+    src: url("../../assets/fonts/Muli-ExtraBold.woff");
 }
 
 @font-face {
     font-family: "MuliExtraBoldItalic";
-    src: url("/assets/fonts/Muli-ExtraBoldItalic.woff");
+    src: url("../../assets/fonts/Muli-ExtraBoldItalic.woff");
 }
 
 @font-face {
     font-family: "PoppinsMedium";
-    src: url("/assets/fonts/Poppins-Medium.ttf");
+    src: url("../../assets/fonts/Poppins-Medium.ttf");
 }
 
 @font-face {
     font-family: "PoppinsSemiBold";
-    src: url("/assets/fonts/Poppins-SemiBold.ttf");
+    src: url("../../assets/fonts/Poppins-SemiBold.ttf");
 
 }
 
@@ -74,7 +74,7 @@ h4{
 @import "./blocks/_media.less";
 @import "./blocks/_menu.less";
 @import "./blocks/_personal.less";
-@import "./blocks/_productsProduct.less";
+@import "./blocks/_product.less";
 @import "./blocks/_smoothies.less";
 @import "./blocks/_social.less";
 @import "./blocks/_story.less";
