--- a/styles/less/blocks/_about.less
+++ b/styles/less/blocks/_about.less
@@ -1,65 +1,71 @@
 // main: ../main.less
 
-.about{
+.about {
     display: flex;
     align-items: center;
     background-color: #128373;
-    border:solid 1px;
-    
-    &__inner{
-    margin-top: 101px;
-    border:solid 1px;
-    }    
-    &__content{
+    border: solid 1px;
+
+    &__inner {
+        margin-top: 101px;
+        border: solid 1px;
+    }
+
+    &__content {
         margin-left: 255px;
-        border:solid 1px;
+        border: solid 1px;
         display: flex;
         flex-direction: column;
         max-width: 500px;
         position: relative;
-        
-        &__content::after{
-            content:"";
+
+        &:after {
+            content: "";
             width: 462px;
             height: 12px;
             background-image: url(/assets/images/greenLine.png);
             position: absolute;
-            background-size:cover;
+            background-size: cover;
             top: 75px;
             left: 69px;
-            }
-            &__title{
-                font-size: 30px;
-                color: #ffffff;
-                border:solid 1px;
-                &__drink{
-                    color: #cae941;
-                    font-family: MuliExtraBoldItalic;
-                }
-                }   
-        &__list{
+        }
+    }
+
+    &__title {
+        font-size: 30px;
+        color: #ffffff;
+        border: solid 1px;
+    }
+
+    &__drink {
+        color: #cae941;
+        font-family: MuliExtraBoldItalic;
+    }
+
+    &__list {
         list-style: none;
-        border:solid 1px;
+        border: solid 1px;
         line-height: 2.05;
         padding: 50px 0 100px 0;
-        &__item{
-            color: #ffffff;
-            font-style:normal;
-            &__text--bolder{
-                font-weight: bolder;
-            }
-            
-        }
-        }
-        
-    &__btn-green{
+    }
+
+    &__item {
+        color: #ffffff;
+        font-style: normal;
+    }
+
+    &__text--bolder {
+        font-weight: bolder;
+    }
+
+
+    &__btn-green {
         margin: 96px;
         height: 60px;
         background-color: #128373;
         border-radius: 35px;
         width: 334px;
-        border:solid 1px;
+        border: solid 1px;
         width: 310px;
+    }
 }
-}
-}    
