--- a/styles/less/blocks/_product.less
+++ b/styles/less/blocks/_product.less
@@ -8,37 +8,37 @@
     align-items:flex-start;
     justify-content: space-around;
     align-content: stretch;
-        .products__item {
+        &__item {
             width: 25%;
             display: flex;
             flex-direction: column;
             padding: 100px 0;
             align-items: center;
         }
-        .products__item--chocolate{
+        &__item--chocolate{
             background-color: #662f14;
         }
-        .products__item--lettuce{
+        &__item--lettuce{
             background-color: #158775;
         }
-        .products__item--ginger{
+        &__item--ginger{
             background-color:#fbb040;
         }
-        .products__item--turmeric{
+        &__item--turmeric{
             background-color: #c24b18;
         }
-        .products__title{
+        &__title{
             padding-top:15px;
             color:white;
             font-size: 18px;
         }
-        .product__sub--title{
+        &__sub--title{
             color:white;
             padding-bottom: 30px;
             font-style: italic;
             padding-top: 5px;
         }
-        .products__btn{
+        &__btn{
             border:1px solid white;
             border-radius: 30px;
             height: 60px;
