added variables vars.less

--- a/styles/less/blocks/_about.less
+++ b/styles/less/blocks/_about.less
@@ -23,7 +23,7 @@
             content: "";
             width: 462px;
             height: 12px;
-            background-image: url(/assets/images/greenLine.png);
+            background-image: url(../../assets/images/greenLine.png);
             position: absolute;
             background-size: cover;
             top: 75px;
