--- a/styles/less/blocks/_blog.less
+++ b/styles/less/blocks/_blog.less
@@ -23,7 +23,7 @@
         &:before {
             content: "";
             display: inline-block;
-            background-image: url(/assets/images/long-line-orange-png.png);
+            background-image: url(../../assets/images/long-line-orange-png.png);
             position: absolute;
             z-index: -777;
             width: 650px;
