--- a/styles/less/blocks/_btnButton.less
+++ b/styles/less/blocks/_btnButton.less
@@ -5,9 +5,10 @@ button {
     background-color: transparent;
     border:none;
 }
+
 .btn--green-bg{
     background-color:#0aa566;
-    border-radius:35px;
+    border-radius:@borderRadius;
     width: 223px;
     height: 71px;
     
