--- a/styles/less/blocks/_product.less
+++ b/styles/less/blocks/_product.less
@@ -19,7 +19,7 @@
             background-color: #662f14;
         }
         &__item--lettuce{
-            background-color: #158775;
+            background-color:@secondary;
         }
         &__item--ginger{
             background-color:#fbb040;
@@ -33,7 +33,7 @@
             font-size: 18px;
         }
         &__sub--title{
-            color:white;
+            color:@textColor;
             padding-bottom: 30px;
             font-style: italic;
             padding-top: 5px;
