--- a/styles/less/blocks/_testimonials.less
+++ b/styles/less/blocks/_testimonials.less
@@ -8,63 +8,65 @@
     display:flex;
     flex-direction: column;
     align-items:center;
-    .testimonials__inner{
+&__inner{
         border:solid 1px;
         margin-top: 123px;
-        .testimonials__title{
+        }
+&__title{
             font-family:Muli-ExtraBold;
             font-size: 50px;
-            .testimonials__Love{
-                color: #f2612d;
-            }
-        
+}
+&__Love{
+        color: #f2612d;
         }
-    }
-    .testimonials__items{
+&__items{
         display: flex;
         justify-content: center;
         margin:123px 0 70px 0;
         position: relative;
         z-index: 3;
-    }
-    .testimonials__items::before{
+    
+&::before{
         content:"";
         width: 764px;
         height: 150px;
-        background-image: url(/assets/images/sarah-a-png.png);
+        background-image: url(../../assets/images/sarah-a-png.png);
         top: -35px;
         right: 125px;
         position: absolute;
         z-index: -1;
     }
-    .testimonials__text{
+}
+&__text{
         display: flex;
         flex-direction: column;
         align-items: center;
         margin-right: 50px;
         padding-top: 60px;
-        .testimonials__cite-text{
+}
+&__cite-text{
             border:solid 1px;
             width: 450px;
             font-family: Muli-Regular;
-            font-size: 18px;
+            font-size: @fontSize;
             font-weight: normal;
             color: #ffffff;
             font-weight: 600;
             text-align: center;
             line-height: 35px;
-        }
-        .testimonials__cite-autor{
+}
+        &__cite-autor{
             border:solid 1px;
             color:orange;
             margin-top: 30px;
             font-family: PoppinsSemiBold;
         }
-    }
-    .testimonials__img{
+    
+    
+&__img{
         position: relative;
-    }
-    .testimonials__img::after{
+    
+    &::after{
         content:"";
         width: 410px;
         height: 300px;
@@ -73,21 +75,23 @@
         left: 165px;
         bottom: 310px;
     }
-    .testimonials__button{
+}
+&__button{
         border:solid 1px;
-        .testimonials__btn--yellowLeft{
+}
+        &__btn--yellowLeft{
             border:solid 1px;
         }
-        .testimonials__btn--yellow{
+        &__btn--yellow{
             border:solid 1px;
             width: 34px;
             margin-left: 100px;
         }
     }
+
     
     
-    
-}
+
 
 
 
