--- a/styles/less/blocks/_media.less
+++ b/styles/less/blocks/_media.less
@@ -8,13 +8,16 @@
     .header__burgher-btn {
         display: block;
     }
+    .header__burgher-btn-icon {
+        width: 100%;
+    }
     .header__content {
         padding-top:200px;
     } 
 } 
 
 @media (max-width: 768px) {
-    /* .header__navigation {
+     .header__navigation {
         display: flex;
         background-color:#0aa566;
         position: fixed;
@@ -29,7 +32,7 @@
         justify-content: flex-end;
         align-items: center;
         padding:100px;
-    }  */
+    }  
     .menu__list{
         display:flex;
         flex-direction: column;
@@ -62,7 +65,7 @@
     
 }
 @media (max-width: 460px) {
-    /* .header__navigation {
+     .header__navigation {
         display: flex;
         background-color:#0aa566;
         position: fixed;
@@ -77,7 +80,7 @@
         justify-content: flex-end;
         align-items: center;
         padding:100px;
-} */
+} 
 .container__details{
     flex-direction: column;
     
