--- a/styles/less/blocks/_story.less
+++ b/styles/less/blocks/_story.less
@@ -7,7 +7,7 @@
     border: solid 1px;
     margin: 120px 0px 150px 0;
     border:solid 1px;
-    .story__inner{
+&__inner{
         border:1px solid black;
         border: 1px solid black;
         /* width: 50%; */
@@ -16,40 +16,40 @@
         justify-content: center;
         margin-right: 205px;
         width: 520px;
-        .story__title{
-            font-size: 50px;
-            text-align: start;
-            border:solid 1px;
+}
+&__title{
+        font-size: 50px;
+        text-align: start;
+        border:solid 1px;
         }
-        .story__text{
-            text-align: start;
-            font-size: 18px;
-            border:solid 1px;
-            text-align: left;
-            line-height: 1.94;
+&__text{
+        text-align: start;
+        font-size: 18px;
+        border:solid 1px;
+        text-align: left;
+        line-height: 1.94;
         }
-        .story__btn-wrapper{
-            height: 60px;
-            border:2px solid black;
-            margin-top: 57px;
-            .story__btn-green{
-    
-                background-color: #158775;
-                border:1px solid;
-                width: 302px;
-                height: 60px;
-                color:white;
-                border-radius: 35px;
-            }
-            .story__icon{
-                position: relative;
-            }
-        }        
-    }
-    .story__img {
+&__btn-wrapper{
+        height: 60px;
+        border:2px solid black;
+        margin-top: 57px;
+}
+&__btn-green{
+        background-color: #158775;
+        border:1px solid;
+        width: 302px;
+        height: 60px;
+        color:white;
+        border-radius: 35px;
+        }
+        
+&__icon{
         position: relative;
-    }
-    .story__img::before{
+        }
+&__img {
+        position: relative;
+    
+&::before{
         content: "";
         border:solid 1px;
         margin-right: 280px;
@@ -58,12 +58,13 @@
         height: 216px;
         background-size:cover;
         position: absolute;
-        background-image: url(/assets/images/Stamp-sunny-text.png);
+        background-image: url(../../assets/images/Stamp-sunny-text.png);
         z-index: 55;
         right: 186px;
-        
     }
 }
+}
+
 
 
 
