added less work

--- a/styles/less/blocks/_about.less
+++ b/styles/less/blocks/_about.less
@@ -39,7 +39,7 @@
 
     &__drink {
         color: #cae941;
-        font-family: MuliExtraBoldItalic;
+        font-family: @muliExtraBoldItalic;
     }
 
     &__list {
