--- a/styles/less/blocks/_blog.less
+++ b/styles/less/blocks/_blog.less
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: MuliExtraBold;
+    font-family: @muliExtraBold;
 
     &__title {
         border: solid 1px;
@@ -64,11 +64,11 @@
         width: 470px;
         margin-left: 80px;
         font-size: 18px;
-        font-family: MuliBold;
+        font-family: @muliBold;
     }
 
     &__btn--white {
-        font-family: MuliExtraBoldItalic;
+        font-family: @muliExtraBoldItalic;
     }
 
     &__img--orange {
