--- a/styles/less/blocks/_testimonials.less
+++ b/styles/less/blocks/_testimonials.less
@@ -13,7 +13,7 @@
         margin-top: 123px;
         }
 &__title{
-            font-family:Muli-ExtraBold;
+            font-family:@muliExtraBold;
             font-size: 50px;
 }
 &__Love{
@@ -47,8 +47,8 @@
 &__cite-text{
             border:solid 1px;
             width: 450px;
-            font-family: Muli-Regular;
-            font-size: @fontSize;
+            font-family: @muli-Regular;
+            font-size: @baseFontSize*1.8;
             font-weight: normal;
             color: #ffffff;
             font-weight: 600;
@@ -59,7 +59,7 @@
             border:solid 1px;
             color:orange;
             margin-top: 30px;
-            font-family: PoppinsSemiBold;
+            font-family: @poppinsSemiBold;
         }
     
     
