--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,40 +1,10 @@
 // out: ../css/main.min.css, compress: true, sourceMap: true
 
 @import "./vars.less";
+@import "./fonts.less";
 
 
 
-
-@font-face {
-    font-family: "MuliRegular";
-    src: url("../../assets/fonts/Muli-Regular.woff");
-}
-
-@font-face {
-    font-family: "MuliBold";
-    src: url("../../assets/fonts/Muli-Bold.woff");
-}
-
-@font-face {
-    font-family: "MuliExtraBold";
-    src: url("../../assets/fonts/Muli-ExtraBold.woff");
-}
-
-@font-face {
-    font-family: "MuliExtraBoldItalic";
-    src: url("../../assets/fonts/Muli-ExtraBoldItalic.woff");
-}
-
-@font-face {
-    font-family: "PoppinsMedium";
-    src: url("../../assets/fonts/Poppins-Medium.ttf");
-}
-
-@font-face {
-    font-family: "PoppinsSemiBold";
-    src: url("../../assets/fonts/Poppins-SemiBold.ttf");
-
-}
 
 html,
 *{
