--- a/styles/less/vars.less
+++ b/styles/less/vars.less
@@ -5,4 +5,10 @@
 @borderRadius: 35px;
 @textColor:white;
 @buttonHeight:6rem;
-@fontSize:18px;
+@baseFontSize:10px;
+
+@muliExtraBoldItalic: 'MuliExtraBoldItalic';
+@muliExtraBold: 'MuliExtraBold';
+@muliBold: 'MuliBold';
+@muli-Regular: 'Muli-Regular';
+@poppinsSemiBold: 'PoppinsSemiBold';
