--- a/styles/less/blocks/_btnButton.less
+++ b/styles/less/blocks/_btnButton.less
@@ -10,6 +10,15 @@ button {
     background-color:#0aa566;
     border-radius:@borderRadius;
     width: 223px;
-    height: 71px;
+    height: 50px;
+    font-family:@muliExtraBold;
+    color: white;
+    font-size: @baseFontSize*2;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    padding: 0 20px;
+    
+    
     
 }
