--- a/styles/less/blocks/_smoothies.less
+++ b/styles/less/blocks/_smoothies.less
@@ -2,11 +2,11 @@
 
 
 .smoothies{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    min-height: 860px;
-    border:solid 1px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        min-height: 860px;
+        border:solid 1px;
 &__tittle{
         font-size: 50px;
         line-height: 0.8;
@@ -16,7 +16,7 @@
         text-align: center;
         line-height: 1.94;
         max-width: 920px;
-        font-family: Muli-Regular;
+        font-family: @muli-Regular;
         font-size: 18px;
         margin-bottom: 65px;
         }
@@ -47,6 +47,6 @@
         
 
 
- 
+
 
 
