--- a/styles/less/blocks/_product.less
+++ b/styles/less/blocks/_product.less
@@ -38,17 +38,17 @@
             font-style: italic;
             padding-top: 5px;
         }
-        &__btn{
-            border:1px solid white;
-            border-radius: 30px;
-            height: 60px;
-            width: 202px;
-            bottom: 77px;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-        }
+        // &__btn{
+        //     border:1px solid white;
+        //     border-radius: 30px;
+        //     height: 60px;
+        //     width: 202px;
+        //     bottom: 77px;
+        //     color: white;
+        //     display: flex;
+        //     align-items: center;
+        //     justify-content: space-around;
+        // }
     
 }
 
